--- a/src/app/components/admin/solicitudes-cotizacion/solicitudes-cotizacion.component.html
+++ b/src/app/components/admin/solicitudes-cotizacion/solicitudes-cotizacion.component.html
@@ -101,7 +101,7 @@
                         <ng-container matColumnDef="acciones">
                             <th mat-header-cell *matHeaderCellDef class="actions-col"> </th>
                             <td mat-cell *matCellDef="let row" class="actions-col">
-                                <button mat-icon-button aria-label="Acciones" [matTooltip]="'Editar cotización'" [routerLink]="'/admin/edicion-cotizacion/' + row.id">
+                                <button mat-icon-button aria-label="Acciones" [matTooltip]="'Editar cotización'" [routerLink]="'/admin/edicion-cotizacion/' + row.public_id">
                                     <mat-icon class="icon-size-7 " [svgIcon]="'heroicons_outline:pencil-square'"></mat-icon>
                                 </button>
 
