--- a/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
+++ b/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
@@ -306,7 +306,7 @@
             class="bg-white dark:bg-gray-900 w-4/5 max-h-[75%] rounded-t-2xl shadow-xl p-4 overflow-hidden animate-slide-up relative">
 
             <!-- Botón cerrar -->
-            <button class="absolute top-2 right-4 text-gray-600 dark:text-gray-300" (click)="cerrarMapa()">
+            <button class="absolute top-2 right-4 text-gray-600 dark:text-gray-300" (click)="abrirUbicacion()">
                 <mat-icon svgIcon="heroicons_outline:x-mark" class="w-8 h-8"></mat-icon>
             </button>
 
