Colores de botones, traduccion de cotizacion

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -600,6 +600,10 @@
     vertical-align: baseline;
 }
 
+.slow-spin {
+  animation: spin 6s linear infinite;
+}
+
 // .always-scrollbar {
 //   position: relative;
 // }
