--- a/src/app/components/admin/solicitudes-cotizacion/solicitudes-cotizacion.component.html
+++ b/src/app/components/admin/solicitudes-cotizacion/solicitudes-cotizacion.component.html
@@ -87,13 +87,9 @@
                         <ng-container matColumnDef="estatus">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Estatus </th>
                             <td mat-cell *matCellDef="let row">
-                                <span class="pill" [ngClass]="{
-            'pill-ok': (row.estatus_nombre || '') === 'Cotizado',
-            'pill-warn': (row.estatus_nombre || '') === 'Nuevo',
-            'pill-danger': (row.estatus_nombre || '') === 'Cancelado'
-          }">
-                                    {{ row.estatus_nombre }}
-                                </span>
+                                <div class="flex justify-center items-center w-full">
+                                    <app-status-badge [status]="row.estatus_nombre"></app-status-badge>
+                                </div>
                             </td>
                         </ng-container>
 
